--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "batono",
-  "version": "0.0.13",
+  "version": "0.0.13-alpha.1",
   "description": "Server-driven UI interactions for the web.",
   "license": "MIT",
   "author": "Pascal Pfeifer <pascal@pfeifer.zone>",
@@ -48,7 +48,8 @@
     "node": ">=18"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "tag": "alpha"
   },
   "scripts": {
     "prepublishOnly": "npm test",
